--- a/react/package.json
+++ b/react/package.json
@@ -1,28 +1,18 @@
 {
-  "name": "my-app",
+  "name": "dropzonehq",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "moment": "^2.19.2",
-    "react": "^16.1.1",
-    "react-addons-css-transition-group": "^16.0.0-alpha.3",
-    "react-addons-transition-group": "^16.0.0-alpha.3",
-    "react-dom": "^16.1.1",
-    "react-edit-inline": "^1.0.8",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "react-table": "^6.7.4",
-    "react-transition-group": "^2.2.1"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "eslint": "^4.13.1",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "webpack": "^3.10.0"
   }
 }
